<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D0050C5A"
    tools:context=".Home_Page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#050C5A">

        <TextView
            android:id="@+id/textView"
            android:layout_width="406dp"
            android:layout_height="121dp"
            android:gravity="center"
            android:text="@string/Text1"
            android:textColor="#FFA500"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#050C5A"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/Text1"
            android:onClick="open1"
            android:src="@drawable/weight" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/Text2"
            android:onClick="open2"
            android:src="@drawable/liters" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#050C5A">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text2"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="30sp"
            android:layout_marginStart="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text3"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="30sp"
            android:layout_marginStart="110dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:background="#050C5A"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/Text4"
            android:onClick="open3"
            android:src="@drawable/length" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/Text5"
            android:onClick="open4"
            android:src="@drawable/temp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#050C5A">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text4"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="30sp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text5"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="30sp"
            android:layout_marginStart="80dp"/>

    </LinearLayout>




</LinearLayout>